--- a/client/src/pages/LibrariesBooksPage/LibrariesBooksPage.scss
+++ b/client/src/pages/LibrariesBooksPage/LibrariesBooksPage.scss
@@ -1,3 +1,54 @@
 @use "../../styles/functions" as *;
 @use "../../styles/mixins" as *;
 @use "../../styles/global" as *;
+@use "../../styles/variables" as *;
+
+.library{
+    margin: toRem(16);
+    &__header{
+
+    }
+
+    &__header--title{
+
+    }
+
+    &__header--info{
+
+       
+
+    }
+
+    &__info{
+        border:black solid 2px;
+        border-radius: 20px;
+        padding: toRem(16);
+    }
+
+
+    &__info--header{
+        margin-bottom: toRem(16);
+
+    }
+
+    &__info--about{
+        color:$sub-text-color;
+        display:flex;
+       
+        
+        
+       
+
+    }
+
+    &__info--detail{
+        @include text-style(toRem(16), normal, 300);
+        
+
+    }
+}
+
+.icon{
+    height: toRem(30);
+    
+}
