--- a/client/src/styles/_fonts.scss
+++ b/client/src/styles/_fonts.scss
@@ -1,1 +1,1 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@300;500&family=Raleway:wght@400;600;700&display=swap');
