--- a/client/src/styles/_global.scss
+++ b/client/src/styles/_global.scss
@@ -1,6 +1,7 @@
 @use "./fonts" as *;
 @use "./mixins" as *;
 @use "./functions" as *;
+@use "./variables" as *;
 
 * {
   margin: 0;
@@ -12,7 +13,8 @@
 }
 
 body {
-  font-family: "Raleway", sans-serif;
+  font-family: "Outfit", sans-serif;
+  color: $text-color;
 }
 
 a {
@@ -23,3 +25,5 @@ a {
 li {
   list-style: none;
 }
+
+
