--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -6,7 +6,12 @@
 
 .header{
     background-color: $background-color;
-    // color: white;
+    position: sticky;
+    top:0;
+    z-index: 10;
+    width: 100%;
+    
+    
     &__logo{
 
     }
