--- a/client/src/components/LibraryBooksList/LibraryBooksList.scss
+++ b/client/src/components/LibraryBooksList/LibraryBooksList.scss
@@ -10,7 +10,7 @@
         border: $text-color solid 2px;
         border-radius: 20px;
         padding: toRem(16);
-        margin: toRem(16);
+        margin-bottom: toRem(16);
 
 
 
@@ -25,7 +25,33 @@
 
     &__header{
         margin-bottom: toRem(16);
+        
 
+    }
+
+    &__header--wrapper{
+        display:flex;
+        justify-content:space-between;
+        align-items:center;
+        margin: toRem(16);
+        padding-top: toRem(38);
+    }
+
+    &__header--title{
+
+    }
+
+    &__header--add{
+        background-color: $btn-color2;
+       
+        width: toRem(100);
+        
+        border-radius: 20px;
+        text-align:center;
+        padding: toRem(4) toRem(8);
+        border: $text-color solid 2px;
+        border-radius: 20px;
+        font-size: toRem(14);
     }
 
     &__header--info{
@@ -51,9 +77,16 @@
         font-size: toRem(14);
         
         
+        
+        
 
     
        
+    }
+
+    &__btnWrapper{
+        display:flex;
+        justify-content:flex-end;
     }
 
 }
