--- a/client/src/pages/BookListPage/BookListPage.scss
+++ b/client/src/pages/BookListPage/BookListPage.scss
@@ -3,18 +3,52 @@
 @use "../../styles/global" as *;
 @use "../../styles/variables" as *;
 
+.booksPage{
+    margin: toRem(16);
+
+    &__header{
+        
+
+    }
+
+    &__info{
+        margin: toRem(16);
+    }
+}
+
+
 
 .bookSearch{
+    
+
+    &__search--bg{
+        background-color:$btn-color2;
+        border: solid $text-color 2px;
+        border-radius: 20px;
+        margin: toRem(32);
+        width: 70%;
+        height: toRem(40);
+        color:$btn-color2;
+        position: absolute;
+        z-index: -10;
+        left: toRem(5);
+        top: toRem(180);
+       
+        
+    }
+
+
    
   
     &__search{
-        margin: toRem(16);
+        margin: toRem(32);
         display:flex;
-        border: 1px inset $sub-text-color;
+        border: 2px solid $text-color;
         border-radius: 20px;
         width: toRem(220);
         justify-content:space-between;
-        width: 70%;       
+        width: 70%;   
+        background: white;    
         
     }
 
@@ -62,7 +96,7 @@
         margin-bottom: toRem(16);
         border: $text-color solid 2px;
         border-radius: 20px;
-        padding: toRem(16);
+        padding: toRem(24);
         
 
     }
@@ -100,5 +134,12 @@
     &__btn{
         display:flex;
         justify-content:flex-end;
+        margin-top: toRem(20);
+    }
+
+    &__top{
+        display:flex;
+        justify-content:space-between;
+        margin-bottom: toRem(8);
     }
 }
