--- a/client/src/pages/LibrariesBooksPage/LibrariesBooksPage.scss
+++ b/client/src/pages/LibrariesBooksPage/LibrariesBooksPage.scss
@@ -9,6 +9,13 @@
 
     }
 
+    &__header--arrow{
+        background: $btn-color2;
+        border-radius: 50%;
+        border:solid 2px $text-color;
+        
+    }
+
     &__header--title{
 
     }
