--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -7,4 +7,11 @@ $btn-color: #fcc10f;
 $background-color:#3ab6e7;
 $close: #f9784b;
 $btn-color2: #66d867;
+$btn-hover-blue:#3d87a5;
+$btn-hover-yellow: #e3ae0e;
+$btn-hover-green:#5bc35d;
+$btn-hover-red:#e06c44;
+
+
+
 
