--- a/client/src/components/AddBook/AddBook.scss
+++ b/client/src/components/AddBook/AddBook.scss
@@ -52,6 +52,7 @@
     border: $text-color solid 2px;
     border-radius: 20px;
     font-size: toRem(14);
+    cursor:pointer;
 
   }
 }
@@ -59,4 +60,9 @@
 .text-area{
     resize:none;
     height: toRem(70);
+}
+
+
+.addBook__form--btn:hover{
+  background-color: $btn-hover-blue;
 }
