--- a/client/src/components/DeleteBook/DeleteBooks.scss
+++ b/client/src/components/DeleteBook/DeleteBooks.scss
@@ -38,19 +38,26 @@
         border: $text-color solid 2px;
         border-radius: 20px;
         font-size: toRem(14);
+        cursor:pointer;
         
     }
 
-    &__btnWrapper{
-        display:flex;
-        justify-content:flex-end;
-    }
+    
 }
 
 .close{
     background-color: $close;
     border-radius: 50%;
     padding: toRem(2);
-    border: solid $text-color 1px;
+    border: solid $text-color 2px;
+    cursor:pointer;
     // width: toRem(20);
+}
+
+.close:hover{
+    background-color: $btn-hover-red;
+}
+
+.delete__button:hover{
+background-color:$btn-hover-yellow;
 }
