--- a/client/src/components/LibraryBooksList/LibraryBooksList.scss
+++ b/client/src/components/LibraryBooksList/LibraryBooksList.scss
@@ -52,6 +52,8 @@
         border: $text-color solid 2px;
         border-radius: 20px;
         font-size: toRem(14);
+        cursor:pointer;
+        
     }
 
     &__header--info{
@@ -75,6 +77,7 @@
         border: $text-color solid 2px;
         border-radius: 20px;
         font-size: toRem(14);
+        cursor:pointer;
         
         
         
@@ -90,3 +93,11 @@
     }
 
 }
+
+.books__header--add:hover{
+        background-color:$btn-hover-green;
+    }
+
+    .books__delete:hover{
+        background-color: $btn-hover-yellow;
+    }
