--- a/client/src/pages/BookListPage/BookListPage.scss
+++ b/client/src/pages/BookListPage/BookListPage.scss
@@ -3,143 +3,133 @@
 @use "../../styles/global" as *;
 @use "../../styles/variables" as *;
 
-.booksPage{
+.booksPage {
+  margin: toRem(16);
+
+  &__header {
+    display: flex;
+  }
+
+  &__info {
     margin: toRem(16);
+  }
 
-    &__header{
-        
+  &__icon {
+    width: toRem(28);
 
-    }
-
-    &__info{
-        margin: toRem(16);
-    }
+    margin-left: toRem(4);
+  }
 }
 
+.bookSearch {
+  &__search--bg {
+    background-color: $btn-color2;
+    border: solid $text-color 2px;
+    border-radius: 20px;
+    margin: toRem(32);
+    width: 70%;
+    height: toRem(40);
+    color: $btn-color2;
+    position: absolute;
+    z-index: -10;
+    left: toRem(5);
+    top: toRem(213);
+  }
 
+  &__search {
+    margin: toRem(32);
+    display: flex;
+    border: 2px solid $text-color;
+    border-radius: 20px;
+    width: toRem(220);
+    justify-content: space-between;
+    width: 70%;
+    background: white;
+  }
 
-.bookSearch{
-    
+  &__search--icon {
+    margin-right: toRem(8);
+    cursor:pointer;
+  }
 
-    &__search--bg{
-        background-color:$btn-color2;
-        border: solid $text-color 2px;
-        border-radius: 20px;
-        margin: toRem(32);
-        width: 70%;
-        height: toRem(40);
-        color:$btn-color2;
-        position: absolute;
-        z-index: -10;
-        left: toRem(5);
-        top: toRem(180);
-       
-        
-    }
+  &__search--btn {
+    // border: solid $text-color 2px;
+    // background: $btn-color2;
+    // border-radius: 20px;
+    // display:flex;
+    // align-items:center;
+    // width: toRem(100);
 
+    // padding: toRem(4) toRem(8);
 
-   
-  
-    &__search{
-        margin: toRem(32);
-        display:flex;
-        border: 2px solid $text-color;
-        border-radius: 20px;
-        width: toRem(220);
-        justify-content:space-between;
-        width: 70%;   
-        background: white;    
-        
-    }
+    // font-size: toRem(14);
 
-    &__search--icon{
-        margin-right: toRem(8);
-       
-    }
+    border: none;
+    background: none;
+  }
 
-    &__search--btn{
-        // border: solid $text-color 2px;
-        // background: $btn-color2;
-        // border-radius: 20px;
-        // display:flex;
-        // align-items:center;
-        // width: toRem(100);
-      
-        // padding: toRem(4) toRem(8);
-     
-        // font-size: toRem(14);
+  &__search--input {
+    border-radius: 20px;
+    border: none;
+    padding: toRem(8);
+    font-family: "Outfit";
 
-        border: none;
-        background: none;
-       
-        
-        
-
-    }
-
-    &__search--input{
-        border-radius: 20px;
-        border: none;
-        padding: toRem(8);
-        font-family: "Outfit";
-        
-        @include text-style(toRem(16), normal, 300);
-  
-
-    }
+    @include text-style(toRem(16), normal, 300);
+  }
 }
 
-.bookList{
-    margin: toRem(16);
+.bookList {
+  margin: toRem(16);
 
-    &__container{
-        margin-bottom: toRem(16);
-        border: $text-color solid 2px;
-        border-radius: 20px;
-        padding: toRem(24);
-        
+  &__container {
+    margin-bottom: toRem(16);
+    border: $text-color solid 2px;
+    border-radius: 20px;
+    padding: toRem(24);
+  }
+  &__headers {
+  }
+  &__header {
+    color: $sub-text-color;
+    font-weight: 300;
+  }
 
-    }
-    &__headers{
+  &__info {
+    @include text-style(toRem(16), normal, 300);
+    margin-bottom: toRem(8);
+  }
 
-    }
-    &__header{
-        color: $sub-text-color;
-        font-weight: 300;
-
-    }
-
-    &__info{
-       
-        @include text-style(toRem(16), normal, 300);
-        margin-bottom: toRem(8);
-
-    }
-
-    &__location{
-        background-color:$btn-color;
-        color: $text-color;
-        border-radius: 20px;
-        
-    
-   
-    text-align:center;
+  &__location {
+    background-color: $btn-color;
+    color: $text-color;
+    border-radius: 20px;
+    text-align: center;
     padding: toRem(4) toRem(8);
     border: $text-color solid 2px;
-  
     font-size: toRem(14);
+    
+   
+   
+  }
 
-    }
 
-    &__btn{
-        display:flex;
-        justify-content:flex-end;
-        margin-top: toRem(20);
+  &__btn {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: toRem(20);
+    
+    
+    :hover {
+        background-color: $btn-hover-yellow;
+        border-radius: 20px;
+        
     }
+     
+  }
 
-    &__top{
-        display:flex;
-        justify-content:space-between;
-        margin-bottom: toRem(8);
-    }
+  &__top {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: toRem(8);
+  }
 }
