--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -11,6 +11,7 @@ $btn-hover-blue:#3d87a5;
 $btn-hover-yellow: #e3ae0e;
 $btn-hover-green:#5bc35d;
 $btn-hover-red:#e06c44;
+$container-hover:#e4e4e4;
 
 
 
