added stylings to pages and cleaned up code

--- a/client/src/components/AddBook/AddBook.scss
+++ b/client/src/components/AddBook/AddBook.scss
@@ -6,7 +6,6 @@
 .addWrapper {
   display: flex;
   justify-content: center;
- 
 }
 .addBook {
   background-color: $btn-color;
@@ -16,8 +15,8 @@
   border: $text-color solid 2px;
   width: 80%;
 
-  &__form{
-      padding: toRem(8);
+  &__form {
+    padding: toRem(8);
   }
 
   &__form--label {
@@ -26,43 +25,38 @@
     margin-bottom: toRem(16);
   }
 
-  &__form--input{
-      border-radius: 20px;
-      border: none;
-      padding: toRem(8);
-      margin-top: toRem(4);
-     @include text-style(toRem(13), nomral, 300);
-     font-family:"Outfit";
-     
+  &__form--input {
+    border-radius: 20px;
+    border: none;
+    padding: toRem(8);
+    margin-top: toRem(4);
+    @include text-style(toRem(13), normal, 300);
+    font-family: "Outfit";
   }
 
-  &__title{
-      display:flex;
-      justify-content: space-between;
-      
+  &__title {
+    display: flex;
+    justify-content: space-between;
   }
-  
 
-  &__form--btn{
+  &__form--btn {
     width: toRem(100);
     background-color: $background-color;
     border-radius: 20px;
-    text-align:center;
+    text-align: center;
     padding: toRem(4) toRem(8);
     border: $text-color solid 2px;
     border-radius: 20px;
     font-size: toRem(14);
-    cursor:pointer;
-
+    cursor: pointer;
   }
 }
 
-.text-area{
-    resize:none;
-    height: toRem(70);
+.text-area {
+  resize: none;
+  height: toRem(70);
 }
 
-
-.addBook__form--btn:hover{
+.addBook__form--btn:hover {
   background-color: $btn-hover-blue;
 }
