--- a/client/src/components/LibraryBooksList/LibraryBooksList.scss
+++ b/client/src/components/LibraryBooksList/LibraryBooksList.scss
@@ -3,101 +3,80 @@
 @use "../../styles/global" as *;
 @use "../../styles/variables" as *;
 
-.books{
-    margin:toRem(16);
+.books {
+  margin: toRem(16);
 
-    &__container{
-        border: $text-color solid 2px;
-        border-radius: 20px;
-        padding: toRem(16);
-        margin-bottom: toRem(16);
+  &__container {
+    border: $text-color solid 2px;
+    border-radius: 20px;
+    padding: toRem(16);
+    margin-bottom: toRem(16);
+  }
 
+  &__wrap {
+    display: flex;
+    justify-content: space-between;
+  }
 
+  &__header {
+    margin-bottom: toRem(16);
+  }
 
-    }
+  &__header--wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: toRem(16);
+    padding-top: toRem(16);
+  }
 
-    &__wrap{
-        display:flex;
-        justify-content:space-between;
-        // margin-bottom: toRem(16);
+  &__header--add {
+    background-color: $btn-color2;
+    width: toRem(100);
+    border-radius: 20px;
+    text-align: center;
+    padding: toRem(4) toRem(8);
+    border: $text-color solid 2px;
+    border-radius: 20px;
+    font-size: toRem(14);
+    cursor: pointer;
+  }
 
-    }
+  &__header--info {
+    color: $sub-text-color;
+    font-weight: 300;
+  }
 
-    &__header{
-        margin-bottom: toRem(16);
-        
+  &__header--details {
+    @include text-style(toRem(16), normal, 300);
+  }
 
-    }
+  &__delete {
+    width: toRem(100);
+    background-color: $btn-color;
+    border-radius: 20px;
+    text-align: center;
+    padding: toRem(4) toRem(8);
+    border: $text-color solid 2px;
+    border-radius: 20px;
+    font-size: toRem(14);
+    cursor: pointer;
+  }
 
-    &__header--wrapper{
-        display:flex;
-        justify-content:space-between;
-        align-items:center;
-        margin: toRem(16);
-        padding-top: toRem(16);
-    }
-
-    &__header--title{
-
-    }
-
-    &__header--add{
-        background-color: $btn-color2;
-       
-        width: toRem(100);
-        
-        border-radius: 20px;
-        text-align:center;
-        padding: toRem(4) toRem(8);
-        border: $text-color solid 2px;
-        border-radius: 20px;
-        font-size: toRem(14);
-        cursor:pointer;
-        
-    }
-
-    &__header--info{
-        color: $sub-text-color;
-        font-weight: 300;
-        
-
-    }
-
-    &__header--details{
-        @include text-style(toRem(16), normal, 300);
-
-    }
-
-    &__delete{
-        width: toRem(100);
-        background-color: $btn-color;
-        border-radius: 20px;
-        text-align:center;
-        padding: toRem(4) toRem(8);
-        border: $text-color solid 2px;
-        border-radius: 20px;
-        font-size: toRem(14);
-        cursor:pointer;
-        
-        
-        
-        
-
-    
-       
-    }
-
-    &__btnWrapper{
-        display:flex;
-        justify-content:flex-end;
-    }
-
+  &__btnWrapper {
+    display: flex;
+    justify-content: flex-end;
+  }
 }
 
-.books__header--add:hover{
-        background-color:$btn-hover-green;
-    }
+.books__header--add:hover {
+  background-color: $btn-hover-green;
+}
 
-    .books__delete:hover{
-        background-color: $btn-hover-yellow;
-    }
+.books__delete:hover {
+  background-color: $btn-hover-yellow;
+}
+
+.books__container:hover{
+    background-color: $container-hover;
+}
